--- a/src/app/employees/employee/employee.component.html
+++ b/src/app/employees/employee/employee.component.html
@@ -7,15 +7,19 @@
         <input type="hidden" formControlName="$key">
 
         <mat-form-field>
-          <input formControlName="fullName" matInput placeholder="Full Name">
+          <input formControlName="fullName" matInput placeholder="Full Name*">
+          <mat-error>This field is mandatory.</mat-error>
         </mat-form-field>
 
         <mat-form-field>
           <input formControlName="email" matInput placeholder="Email">
+          <mat-error>Invalid email address</mat-error>
         </mat-form-field>
 
         <mat-form-field>
-          <input formControlName="mobile" matInput placeholder="Mobile">
+          <input formControlName="mobile" matInput placeholder="Mobile*">
+          <mat-error *ngIf="service.form.controls['mobile'].errors?.required">This filed is mandatory.</mat-error>
+          <mat-error *ngIf="service.form.controls['mobile'].errors?.minLength">Minimum 8 characters needed.</mat-error>
         </mat-form-field>
 
         <mat-form-field>
@@ -55,8 +59,8 @@
         </div>
 
         <div class="button-row">
-          <button mat-raised-button color="primary" type="submit">Submit</button>
-          <button mat-raised-button color="warn">Clear</button>
+          <button mat-raised-button color="primary" type="submit"[disabled]="service.form.invalid">Submit</button>
+          <button mat-raised-button color="warn" (click)="onClear()">Clear</button>
         </div>
 
       </div>
