Render a Dynamic Dropdown by retrieving a collection from firebase and converting it to an array and use it instead of the hard-coded array for departments.

--- a/src/app/employees/employee/employee.component.html
+++ b/src/app/employees/employee/employee.component.html
@@ -42,8 +42,8 @@
         <mat-form-field>
           <mat-select formControlName="department" placeholder="Department">
             <mat-option>None</mat-option>
-            <ng-container *ngFor="let department of departments">
-              <mat-option value="{{department.id}}">{{department.value}}</mat-option>
+            <ng-container *ngFor="let department of departmentService.array">
+              <mat-option value="{{department.$key}}">{{department.code}}-{{department.name}}</mat-option>
             </ng-container>
           </mat-select>
         </mat-form-field>
