Retrieved a collection from firebase, converting it to an array, then converting it into an object of type MatTableDataSource to be used for rendering a material data table, initiated by defining a template for a one column.

--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -4,5 +4,5 @@
     <span>Angular Data Table with Firebase CRUD operations</span>
     <span class="fill-remaining-space"></span>
   </mat-toolbar>
-  <app-employee></app-employee>
+  <app-employee-list></app-employee-list>
 </div>
