--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -41,8 +41,8 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef></mat-header-cell>
       <mat-cell *matCellDef="let row">
-        <button mat-icon-button>
-          <mat-icon>launch</mat-icon>
+        <button mat-icon-button (click)="onEdit(row)">
+          <mat-icon>edit</mat-icon>
         </button>
         <button mat-icon-button color="warn">
           <mat-icon>delete_outline</mat-icon>
