Implemented the delete operation on clicking the delete button

--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -44,7 +44,7 @@
         <button mat-icon-button (click)="onEdit(row)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn">
+        <button mat-icon-button color="warn" (click)="onDelete(row.$key)">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </mat-cell>
