--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,12 @@ snack-bar-container.success {
     color: #FFF;
 }
 
-snack-bar-container.notification {
+snack-bar-container.warn {
+    background-color: #f99157;
+    color : #fff;
+}
+
+snack-bar-container.notification simple-snack-bar {
     font-size: 18px !important;
     font-weight: bold;
 }
