--- a/src/app/mat-confirm-dialog/mat-confirm-dialog.component.html
+++ b/src/app/mat-confirm-dialog/mat-confirm-dialog.component.html
@@ -4,5 +4,5 @@
     <span class="content-span full-width">{{data.message}}</span>
   </div>
   <button mat-flat-button id="no-button" [mat-dialog-close]="false">No</button>
-  <button mat-flat-button id="yes-button" [mat-dialog-close]="true">Yes</button>
+  <button mat-flat-button id="yes-button" [mat-dialog-close]="true" disabled>Yes</button>
 </div>
